[package]
name = "tokio-current-thread"

# When releasing to crates.io:
# - Update html_root_url.
# - Update doc URL
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.4"
documentation = "https://docs.rs/tokio-current-thread/0.1.4/tokio_current_thread"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://github.com/tokio-rs/tokio"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = """
Single threaded executor which manage many tasks concurrently on the current thread.
"""
keywords = ["futures", "tokio"]
categories = ["concurrency", "asynchronous"]

[dependencies]
tokio-executor = { version = "0.1.5", path = "../tokio-executor" }
futures = "0.1.19"

[dev-dependencies]
mio = "0.6.14"
tokio = { version = "0.1.14", path = ".." }
tokio-reactor = { version = "0.1.8", path = "../tokio-reactor" }
